<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="modern_interior_desgn_for_beginner">Modern interior desgn for beginner!</string>
    <string name="_4_5">4.5</string>
    <string name="popular_category_our_in_platform">Popular category our in platform</string>
    <string name="top_searches">Top searches</string>
    <string name="photography">photography</string>
    <string name="search">Search</string>
    <string name="adobe_illustrator_for_all_beginner_artist">Adobe illustrator for all beginner artist</string>
    <string name="_2k_student">2k student</string>
    <string name="my_save_list">My save list</string>
    <string name="add_more">Add more</string>
    <string name="saved">Saved</string>
    <string name="success_copy">Successfully copied to clipboard !</string>
    <string name="test_bio">Just a simple guy who loves do something new and fun! 😜</string>
    <string name="xaldarof">\@xaldarof</string>
    <string name="projects">Projects</string>
    <string name="courses">Courses</string>
    <string name="following">Following</string>
    <string name="nothing_is_here">Nothing is here !</string>
    <string name="we_found_nothing">We found nothing in your save list! Want to have some? Try something best</string>
    <string name="recomended">Recomended</string>
    <string name="title">Title</string>
    <string name="hot">hot</string>
    <string name="anny_morriarty">Anny Morriarty</string>
    <string name="_1_hour_30_min">1.hour 30 min</string>
    <string name="_12_lessons">12 Lessons</string>
    <string name="_2k_students">2K students</string>
    <string name="lorem_ipsum">Ipsum quam imperdiet mollis massa bibendum odio vitae in vehicula augue ullamcorper eget a ultrices amet amet, arcu at sem et egestassaf a facilisi a, diam integer velit, sed gravida sed eu</string>
    <string name="buy_now">Buy now</string>
    <string name="see_more">See more</string>
    <string name="introduction">Introduction</string>
    <string name="feedback">Feedback</string>
    <string name="reviews">Reviews</string>
    <string name="_756">756</string>
    <string name="test_date">10.10.2022</string>
    <string name="test_hour">08:15</string>
    <string name="_31_mins_ago">31 mins ago</string>
    <string name="load_more">Load more</string>
    <string name="overview">Overview</string>
    <string name="lessons">Lessons</string>
    <string name="introduction_to_cimics_drawing_course">Introduction to cimics drawing course</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="add_project">Add project</string>
    <string name="_5_comments">5 Comments</string>
    <string name="add_comment">Add comment</string>
    <string name="project_by_student">Project by student</string>
</resources>