<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_132"
    android:layout_marginStart="@dimen/dimen_16"
    android:layout_marginTop="@dimen/dimen_8"
    android:layout_marginEnd="@dimen/dimen_16">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dimen_12"
        android:layout_marginTop="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/test_avatar" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="2"
        android:paddingStart="@dimen/dimen_6"
        android:paddingEnd="@dimen/dimen_6"
        android:text="@string/adobe_illustrator_for_all_beginner_artist"
        android:textColor="@color/grey_800"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/authorTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="2"
        android:paddingStart="@dimen/dimen_6"
        android:paddingEnd="@dimen/dimen_6"
        android:text="@string/adobe_illustrator_for_all_beginner_artist"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/authorTv">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_16"
            android:layout_height="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_6"
            android:src="@drawable/ic_user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_6"
            android:text="@string/_2k_student" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/dimen_16"
            android:layout_height="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:src="@drawable/ic_star" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_2"
            android:text="@string/_4_5" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>